manifests/ingressroutes.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`grafana.lan.e-dani.com`) && (ClientIP(`192.168.50.0/24`) || ClientIP(`100.64.0.0/10`) || ClientIP(`10.42.0.0/16`))
      priority: 300
      services:
        - name: vm-grafana
          port: 80
    - kind: Rule
      match: Host(`grafana.lan.e-dani.com`)
      priority: 100
      middlewares:
        - name: sso-chain
          namespace: keycloak
      services:
        - name: vm-grafana
          port: 80
  tls:
    secretName: wildcard-lan-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: alertmanager
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`alertmanager.lan.e-dani.com`) && (ClientIP(`192.168.50.0/24`) || ClientIP(`100.64.0.0/10`) || ClientIP(`10.42.0.0/16`))
      priority: 300
      services:
        - name: vmalertmanager-vm-victoria-metrics-k8s-stack
          port: 9093
    - kind: Rule
      match: Host(`alertmanager.lan.e-dani.com`)
      priority: 100
      middlewares:
        - name: sso-chain
          namespace: keycloak
      services:
        - name: vmalertmanager-vm-victoria-metrics-k8s-stack
          port: 9093
  tls:
    secretName: wildcard-lan-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: vmsingle
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`vm.lan.e-dani.com`) && (ClientIP(`192.168.50.0/24`) || ClientIP(`100.64.0.0/10`) || ClientIP(`10.42.0.0/16`))
      priority: 300
      services:
        - name: vmsingle-vm-victoria-metrics-k8s-stack
          port: 8428
    - kind: Rule
      match: Host(`vm.lan.e-dani.com`)
      priority: 100
      middlewares:
        - name: sso-chain
          namespace: keycloak
      services:
        - name: vmsingle-vm-victoria-metrics-k8s-stack
          port: 8428
  tls:
    secretName: wildcard-lan-tls
